# meals

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  Untitled.ipynb  database_create.py  db_config.py  docker-compose.yml  main.py  meal_tracker.db  models.py  populate_db.py  pyproject.toml  schemas.py  start_web_server.txt
data/: meal_tracker.db
static/js/: meal_finder.js  meals.js
templates/: dashboard.html  meal_entry_form.html  meal_finder.html
