[project]
name = "meals"
version = "0.1.0"
description = "Project to track various dinner options"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.125.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
